--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "babel": "^6.23.0",
-    "eslint": "8.57.0",
-    "eslint-config-next": "14.2.2",
-    "next": "^14.2.2",
-    "npx": "^10.2.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "sass": "^1.75.0",
-    "update": "^0.7.4"
+    "react": "19.0.0-rc-69d4b800-20241021",
+    "react-dom": "19.0.0-rc-69d4b800-20241021",
+    "next": "15.0.1"
+  },
+  "devDependencies": {
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1"
   }
 }
