--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -33,7 +33,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts"
-  ],
+, "src/services/IsAuthenticated.tsx"  ],
   "exclude": [
     "node_modules"
   ]
